# ceres-python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
src/: bindings.cpp
tests/: test.py
